test/invalid/baseline/constructor-escaped.txt
Syntax error at line 2:
  object _constructor
         ^ _constructor is a reserved identifier and must not be used.
